comments formatted for clarity

--- a/Goodreads_Webscraping.ipynb
+++ b/Goodreads_Webscraping.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scraping first half of data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,34 +54,50 @@
     "authors = []\n",
     "likes = []\n",
     "\n",
+    "#list of tags, and so indirectly, list of web pages to be scraped. This is only half the full list; it was broken up\n",
+    "# to make troubleshooting easier\n",
     "tag_list = ['love', 'life', 'inspirational', 'humor', 'philosophy', 'god', 'inspirational-quotes', 'truth', \n",
     "            'wisdom', 'poetry', 'romance', 'death', 'happiness', 'hope', 'faith', 'inspiration', 'quotes']\n",
     "\n",
+    "# for every tag, 100 pages of quotes are provided by goodreads.com. Here we scrape data from all of them.\n",
     "for i in tag_list:\n",
     "    for j in range(100):\n",
     "        url = \"https://www.goodreads.com/quotes/tag/{}?page={}\".format(i, j+1)\n",
     "        r = requests.get(url)\n",
     "        soup = BeautifulSoup(r.text, 'html.parser')\n",
     "        \n",
+    "        # this boolean list will be used to handle errors that arise when webscraping\n",
     "        success = [True for k in range(len(soup.find_all(class_=\"quoteText\")))]\n",
     "        \n",
+    "        #initialize a count\n",
     "        count_1 = -1\n",
+    "        \n",
     "        #for every quote found, add it to the list of quotes\n",
     "        for my_tag in soup.find_all(class_=\"quoteText\"):\n",
     "            count_1 += 1\n",
     "            try:\n",
+    "                # Occasionally, an issue would arise with scraping author data. If this happens, none of the data \n",
+    "                # associated with that quote should be added to the dataset. To accomplish this, in the event of \n",
+    "                # an error, appending the author data fails, appending the quotes data is skipped, and the success \n",
+    "                # boolean at the current index is set to false.\n",
     "                authors.append(my_tag.text.split(\"//\")[0].split(\"―\")[1].split(\",\")[0])\n",
     "                quotes.append(my_tag.text.split(\"//\")[0].split(\"―\")[0])\n",
     "            except:\n",
     "                success[count_1] = False\n",
     "                continue\n",
     "        \n",
+    "        #initialize a count that will mirror the values of the first count as the following loop is executed.\n",
     "        count_2 = -1\n",
+    "        \n",
+    "        # The likes data is scraped from different html code, so it is scraped in a separate for loop. A count is \n",
+    "        # in place to ensure that certain rows are skipped when the corresponding data was not successfully scraped.\n",
     "        for my_tag in soup.find_all('a', {'class': 'smallText', 'title': 'View this quote'}):\n",
     "            count_2 += 1\n",
+    "            # if the corresponding author and quote data was successfully scraped\n",
     "            if success[count_2] == True:\n",
     "                likes.append(my_tag.text.split(\" \")[0])\n",
-    "\n",
+    "        \n",
+    "        #way to monitor progress\n",
     "        if (j+1) % 100 == 0:    \n",
     "            print('tag done')"
    ]
@@ -95,20 +118,10 @@
     }
    ],
    "source": [
+    "#these should all be the same magnitude\n",
     "print(len(quotes))\n",
     "print(len(authors))\n",
     "print(len(likes))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "quotes_spare = quotes\n",
-    "authors_spare = authors\n",
-    "likes_spare = likes"
    ]
   },
   {
@@ -117,6 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#get rid of extra white spaces\n",
     "quotes = [quote.strip() for quote in quotes]\n",
     "authors = [author.strip() for author in authors]\n",
     "likes = [like.strip() for like in likes]"
@@ -131,6 +145,20 @@
     "#get rid of parentheses around quotes\n",
     "quotes = [quote[1:] for quote in quotes]\n",
     "quotes = [quote[:-1] for quote in quotes]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scraping second half of data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code in this section is analogous to the code in the first section"
    ]
   },
   {
@@ -223,9 +251,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#get rid of parentheses around quotes\n",
     "quotes_2 = [quote_2[1:] for quote_2 in quotes_2]\n",
     "quotes_2 = [quote_2[:-1] for quote_2 in quotes_2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Combining the data and creating dataframe"
    ]
   },
   {
@@ -234,6 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Combining data\n",
     "Quotes = quotes + quotes_2\n",
     "Authors = authors + authors_2\n",
     "Likes = likes + likes_2"
