--- a/Word_Embeddings.ipynb
+++ b/Word_Embeddings.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NLP on quotes data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -266,13 +273,17 @@
     "\n",
     "    for quote in tqdm(quotes):\n",
     "        tokens = word_tokenize(quote)\n",
+    "        \n",
     "        # Convert to lower case\n",
     "        tokens = [w.lower() for w in tokens]\n",
+    "        \n",
     "        # Remove punctuation\n",
     "        table = str.maketrans('', '', string.punctuation)\n",
     "        stripped = [w.translate(table) for w in tokens]\n",
+    "        \n",
     "        # Remove remaining tokens that are not alphabetic\n",
     "        words = [word for word in stripped if word.isalpha()]\n",
+    "        \n",
     "        # Filter out stopwords\n",
     "        stop_words = set(stopwords.words('english'))\n",
     "        words = [w for w in words if not w in stop_words]\n",
@@ -317,41 +328,6 @@
    ],
    "source": [
     "len(quotes_processed_final)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Words = list(set(words.words()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-132-15ac786649b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquotes_processed_final\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquotes_processed_final\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mquotes_processed_final\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mWords\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;31m#Comparing if word is non-English\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m             \u001b[0mquotes_processed_final\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(len(quotes_processed_final)):\n",
-    "    for j in range(len(quotes_processed_final[i])):\n",
-    "        if not wordnet.synsets(quotes_processed_final[i][j]):#Comparing if word is non-English\n",
-    "            quotes_processed_final.pop(i)"
    ]
   },
   {
